--- a/stappenplan.html
+++ b/stappenplan.html
@@ -17,6 +17,11 @@
         <li>Start de live server door onderaan op de knop <strong>Go Live</strong> te klikken. Als het goed verlopen is opent nu de browser en zie je een blanco pagina</li>
     </ul>
     <h2>Stap 2. HTML & CSS</h2> 
+    <p>Nu is het tijd om te coderen...</p>
+    <ul>
+        <li>Kopieer nu onderstaande code in jouw <strong>index.html</strong></li>
+        <li>Kopieer onderstaande code in jouw <strong>styles.css</strong></li>
+    </ul> 
     <h2>Stap 3. Interactiviteit met Javascript</h2>
 </body>
 </html>
