--- a/stappenplan.html
+++ b/stappenplan.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <link rel="stylesheet" href="./css/stappenplan.css">
+    <link rel="stylesheet" href="./css/reset.css"> 
+    <link rel="stylesheet" href="./css/stappenplan.css">
 </head>
 <body>
     <h1>Workshop</h1> 
