--- a/stappenplan.html
+++ b/stappenplan.html
@@ -25,5 +25,6 @@
         <li>Kopieer onderstaande code in jouw <strong>styles.css</strong></li>
     </ul> 
     <h2>Stap 3. Interactiviteit met Javascript</h2>
+    test
 </body>
 </html>
