--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MemoryJungle</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/card.js"></script>
 </head>
 <body>
     <h1>Memory Jungle</h1> 
