--- a/stappenplan.html
+++ b/stappenplan.html
@@ -8,22 +8,47 @@
     <link rel="stylesheet" href="./css/stappenplan.css">
 </head>
 <body>
+    <div class="title_SP">
     <h1>Workshop</h1> 
     <p>We gaan memory jungle van scratch maken!</p>
+    </div>
+
+    <div class="SP__step-one">
     <h2>Stap 1. Mappen en bestanden</h2>
     <ul>
-        <li>Maak een nieuwe map aan en geef het de naam <strong>Memory Jungle</strong>.</li>
-        <li>Open de map in Visual Studio Code.</li>
-        <li>Bouw onderstaande mappenstructuur na.</li>
-        <li>ga binnen visual studio code naar extensions en installeer de plugin <strong>Live Server</strong>.</li>
-        <li>Start de live server door onderaan op de knop <strong>Go Live</strong> te klikken. Als het goed verlopen is opent nu de browser en zie je een blanco pagina</li>
+        <li>
+        Maak een nieuwe map aan en geef het de naam <strong>Memory Jungle</strong>.
+        <img src="./img/map.png">
+        </li>
+
+        <li>
+        Open de map in Visual Studio Code.
+        <img class="img__size--small" src="./img/visual-studio-code-icon.webp">
+        </li>
+
+        <li>
+        Bouw onderstaande mappenstructuur na.
+        </li>
+
+        <li>
+        ga binnen visual studio code naar extensions en installeer de plugin <strong>Live Server</strong>.
+        </li>
+
+        <li>
+        Start de live server door onderaan op de knop <strong>Go Live</strong> te klikken. Als het goed verlopen is opent nu de browser en zie je een blanco pagina
+        </li>
     </ul>
+    </div>
+
+    <div class="SP__step-two">
     <h2>Stap 2. HTML & CSS</h2> 
     <p>Nu is het tijd om te coderen...</p>
     <ul>
         <li>Kopieer nu onderstaande code in jouw <strong>index.html</strong></li>
         <li>Kopieer onderstaande code in jouw <strong>styles.css</strong></li>
     </ul> 
+    </div>
+
     <h2>Stap 3. Interactiviteit met Javascript</h2>
 </body>
 </html>
