start hamburger nav

--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1>Memory Jungle</h1> 
-    <div id="container">
 
+    <div class="hamburger">
+        <input type="checkbox" id="active">
+        <label for="active" class="menu-btn">
+            <span></span></label>
+        <label for="active" class="close"></label>
+        <div class="wrapper">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="content">
+        <h1>Memory Jungle</h1> 
+            <div id="container">
+
+            </div>
+        </div>
     </div>
+
+   
     <script src="./js/card.js"></script>
 </body>
 </html
