--- a/index.html
+++ b/index.html
@@ -9,27 +9,20 @@
 </head>
 <body>
 
-    <div class="hamburger">
-        <input type="checkbox" id="active">
-        <label for="active" class="menu-btn">
-            <span></span></label>
-        <label for="active" class="close"></label>
-        <div class="wrapper">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+            
+    <div class="main__container">   
+        <aside>
+            <h2>MemoryJungle</h2>
+            <ul class="aside__nav">
+                <li><a href="./index.html">Speel</a></li>
+                <li><a href="./stappenplan.html">Maak het zelf</a></li>
             </ul>
-        </div>
-        <div class="content">
-        <h1>Memory Jungle</h1> 
-            <div id="container">
+        </aside>
 
-            </div>
+        <div class="game__container">
+            <div class="game" id="container"></div>
         </div>
-    </div>
-
-   
+    </div> 
     <script src="./js/card.js"></script>
 </body>
 </html
