--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </aside>
 
         <div class="game__container">
-            <div class="game" id="container"></div>
+            <div class="game" id="container">
+                
+            </div>
         </div>
     </div> 
     <script src="./js/card.js"></script>
