--- a/stappenplan.html
+++ b/stappenplan.html
@@ -19,10 +19,14 @@
     </aside>
 
     <div class="stappenplan">
+        <div class="bg-img--1">
+        
+        
         <div class="title_SP">
             <h1>Workshop</h1> 
             <p>We gaan memory jungle van scratch maken!</p>
         </div>
+    </div>
 
     <div class="SP__step--one">
         <h2>Stap 1. Mappen en bestanden</h2>
@@ -50,6 +54,7 @@
                 </li>
             </ul>
     </div>
+
 
     <div class="SP__step--two">
         <h2>Stap 2. HTML & CSS</h2> 
