--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </aside>
 
-        <div class="game__container">
+        <div class="game__container bg-img--2">
             <div class="game" id="container">
                 
             </div>
