--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>MemoryJungle</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;700&family=Sedgwick+Ave+Display&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -19,7 +23,7 @@
             </ul>
         </aside>
 
-        
+
         <div class="game__container bg-img--2">
             <div class="game" id="container">
                 
