--- a/stappenplan.html
+++ b/stappenplan.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/reset.css"> 
     <link rel="stylesheet" href="./css/stappenplan.css">
     <link rel="stylesheet" href="css/prism.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;700&family=Sedgwick+Ave+Display&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="SP__container">
