--- a/stappenplan.html
+++ b/stappenplan.html
@@ -47,6 +47,7 @@
 
                 <li>
                 <p>Bouw onderstaande mappenstructuur na.</p>
+                <img src="./img/mappenstruc.png">
                 </li>
 
                 <li>
